Adicionadas annotations ao model Parada. Alterações nas migrations do banco de dados, para os atributos DateTime e para os atributos Double.
